# aws-sagemaker-hf-model-deployment

./: .gitignore  Makefile  project.code-workspace  pyproject.toml  test_endpoint.py
.github/workflows/: create_model_endpoint.yaml  model-to-s3-from-hf-hub.yaml
terraform/: main.tf  outputs.tf  provider.tf
terraform/modules/aws-sagemaker-hf-pytorch-inference-model-deployment/: main.tf  outputs.tf  variables.tf
terraform/modules/aws-sagemaker-serverless-hf-pytorch-inference-model-deployment/: main.tf  variables.tf
test_model/: .gitignore  pyproject.toml  test_endpoint.py
