[project]
name = "aws-hf-model-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub[cli]>=0.27.1",
    "humanize>=4.11.0",
    "transformers[torch]>=4.48.0",
]

[dependency-groups]
dev = [
    "boto3>=1.35.97",
    "pytest>=8.3.4",
    "sagemaker-huggingface-inference-toolkit>=2.4.1",
]

[tool.mypy]
disallow_untyped_calls = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "I",    # isort
    "E",    # pycodestyle
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "PERF",
]
