[project]
name = "aws-sagemaker-hf-model-deployment"
version = "0.1.0"
description = "AWS SageMaker Hugging Face Model Deployment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["boto3>=1.35.97"]

[tool.mypy]
disallow_untyped_calls = true

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "I",    # isort
    "E",    # pycodestyle
    "S",    # flake8-bandit
    "N",    # pep8-naming
    "PERF",
]
